# progame

./: .gitignore  Doxyfile  Makefile  README  indent.sh
autoawesome/: Makefile.am  configure.ac
conf/: progame.conf  weapons
res/: tmx2bin  untitled.tmx
res/maps/: README  untitled.lua  untitled.tmx
res/scripts/: README  config.lua  entity.lua  init.lua  main.lua
res/test/: assimp_basic.dae
script/: demo
scripts/: README  indent
src/: ai.c  ai.h  confag.c  config.c  config.h  entities.c  entities.h  entity.c  entity.h  event.c  event.h  game.c  game.h  input.c  input.h  main.c  main.h  motion.c  motion.h  player.c  player.h  script.c  script.h  tilemap.c  tilemap.h  tmx.c  tmx.h  world.c  world.h
src/test/: assimp_basic.c  assimp_basic.txt  lua_cross_yield.txt  lua_cross_yield51.c  lua_cross_yield52.c  lua_cross_yield_common.c
